--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
     "immer": "^9.0.3",
     "lodash": "^4.17.20",
     "msfs-geo": "^0.1.0-alpha3",
+    "msfs-navdata": "^1.0.6",
+    "node-fetch": "^2.6.6",
     "nanoid": "^3.3.1",
     "network": "^0.6.1",
     "pdf-to-printer": "^5.1.1",
